# forge-py

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  pyproject.toml
.github/: build.yml  release-created.yml
.github/workflows/: build.yml  release-created.yml  wait-for-pypi.py
.github/workflows/setup-python-poetry/: action.yml
configs/: config.yml
docker/: lambdaDockerfile  lambdaDockerfileArm
podaac/forge_py/: args.py  cli.py  forge.py  open_cv_footprint.py  test_open_cv_forge.py
podaac/forge_py/strategies/: alpha_shape_footprint.py  open_cv_footprint.py  shapely_linestring_footprint.py
podaac/lambda_handler/: lambda_handler.py
regression_test/: README.md  regression.py
terraform/: README.md  forge_py_ecr.tf  forge_py_fargate.tf  forge_py_lambda.tf  main.tf  output.tf  variable.tf
terraform/fargate/: fargate.tf  main.tf
tests/: footprint_result.txt  footprint_result_open_cv.txt  input.txt  test_footprint_branch.py  test_footprint_generator.py
tests/input/: SCATSAT1_ESDR_L2_WIND_STRESS_V1.1.cfg  SCATSAT1_ESDR_L2_WIND_STRESS_V1.1_bin_avg.cfg  SCATSAT1_ESDR_L2_WIND_STRESS_V1.1_open_cv.cfg
tests/results/: footprint_result_bin_avg.txt  footprint_result_open_cv.txt
