[tool.poetry]
name = "forge-py"
version = "0.1.0"
description = "forge-py is a footprint generator (FOotpRint GEnerator) from science data netcdf files"
authors = ["James Wood <James.F.Wood@jpl.nasa.gov>"]
readme = "README.md"
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
alphashape = "^1.3.1"
np = "^1.0.2"
shapely = "^2.0.3"
xarray = "^2024.3.0"
cumulus-process = "^1.3.0"
requests = "^2.31.0"


[tool.poetry.dev-dependencies]
pytest = "^8.0.1"
flake8 = "^7.0.0"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
forge = "podaac.forge_py.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
