[tool.poetry]
name = "podaac-forge-py"
version = "0.7.0rc1"
description = "forge-py is a footprint generator (FOotpRint GEnerator) from science data netcdf files"
authors = ["James Wood <James.F.Wood@jpl.nasa.gov>"]
readme = "README.md"
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
alphashape = "^1.3.1"
np = "^1.0.2"
shapely = "^2.0.3"
xarray = "^2026.1.0"
cumulus-process = "^1.6.0"
requests = "^2.31.0"
netcdf4 = "^1.6.5"
pillow = "^12.0.0"
opencv-python-headless = "^4.11.0.0"
numpy = "^2.3.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
flake8 = "^7.0.0"
pylint = "^4.0.0"
pytest-cov = "^7.0.0"
moto = "^5.0.13"
mock = "^5.1.0"

[tool.poetry.scripts]
forge-py = "podaac.forge_py.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
